# rustydocker

./: .editorconfig  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  release.yml
docs/superpowers/plans/: 2026-04-08-phase1-bugfix-foundations.md  2026-04-08-remaining-p4-tasks.md
src/: app.rs  config.rs  event.rs  lib.rs  main.rs  update.rs
src/docker/: client.rs  compose.rs  mod.rs  stats.rs
src/ui/: bulk.rs  cleanup.rs  confirm.rs  custom_commands.rs  env.rs  graph.rs  help.rs  info.rs  layout.rs  log_diff.rs  logs.rs  mod.rs  sidebar.rs  stats_compare.rs  stats_panel.rs  theme.rs  top.rs  update_modal.rs
tests/: app_state_test.rs  compose_parse_test.rs  graph_test.rs  stats_parse_test.rs  update_tests.rs  version_cli.rs
