[package]
name = "rustydocker"
version = "0.1.0"
edition = "2021"
description = "A fast, compose-first Docker TUI written in Rust"
license = "MIT"
repository = "https://github.com/kennywillbe/rustydocker"

[dependencies]
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1"
futures-util = "0.3"
chrono = "0.4"
unicode-width = "0.2"

[dev-dependencies]
serde_json = "1"
